<resources>
    <string name="app_name">游老大_傲剑DEMO</string>
    <string name="menu_settings">菜单</string>
    <string name="uld_ingame">您已登录游戏</string>
    <string name="uld_viewuserinfo">查看用户信息</string>
    <string name="uld_finish_game">退出游戏</string>
    
    <string name="uld_welcome">This is uld.sdk.</string>
    <string name="uld_close">关闭</string>
    <string name="uld_quickregister">快速注册</string>
    <string name="uld_logintitle">游老大</string>
    <string name="uld_registertitle">注册</string>
    <string name="uld_recharge">充值</string>
    <string name="uld_username">　用户名</string>
    <string name="uld_usernameex">　用户名:</string>
    <string name="uld_inputtip">点击输入用户名</string>
    <string name="uld_inputpasswordtip">点击输入密码</string>
    <string name="uld_inputoldpasswordtip">旧密码</string>
    <string name="uld_inputnewpasswordtip">新密码</string>
    <string name="uld_inputconfirmpasswordtip">确认密码</string>
    <string name="uld_inputphonetip">点击输入手机号</string>
    <string name="uld_usernameerrmsg">请输入正确的用户名，长度6－20</string>
    <string name="uld_musttip">必填</string>
    <string name="uld_password">　　密码</string>
    <string name="uld_oldpassword">　旧密码</string>
    <string name="uld_newpassword">　新密码</string>
    <string name="uld_submit">提交</string>
    <string name="uld_passwordex">　　密码:</string>
    <string name="uld_passworderrmsg">请输入正确的密码，长度6－20</string>
    <string name="uld_passwordemptymsg">请输入密码</string>
    <string name="uld_confirmpassword">确认密码</string>
    <string name="uld_confirmpassworderrmsg">确认密码与密码不一致</string>
    <string name="uld_rememberpassword">记住密码</string>
    <string name="uld_forgetpassword">忘记密码</string>
    <string name="uld_findpassword">找回密码</string>
    <string name="uld_modifypassword">修改密码</string>
    <string name="uld_login">登录</string>
    <string name="uld_register">注册</string>
    <string name="uld_userinfo">用户信息</string>
    <string name="uld_userinfotip">恭喜您，注册成功!</string>
    <string name="uld_dialogtitle">游老大游戏</string>
    <string name="uld_dialogmsg">数据处理中，请稍后...</string>
    <string name="uld_back">返回</string>
    <string name="uld_rechargetitle">游戏充值</string>
    <string name="uld_alipay">支付宝</string>
    <string name="uld_alipay_">快捷支付</string>
    <string name="uld_zgydk">中国移动充值卡</string>
    <string name="uld_zglt">中国联通充值卡</string>
    <string name="uld_zgdx">中国电信充值卡</string>
    <string name="uld_jwykt">骏网一卡通</string>
    <string name="uld_sdk">盛大卡</string>
    <string name="uld_wyykt">网易一卡通</string>
    <string name="uld_wmykt">完美一卡通</string>
    <string name="uld_ztk">征途卡</string>
    <string name="uld_jyykt">久游一卡通</string>
    <string name="uld_ybekt">易宝E卡通</string>
    <string name="uld_zyykt">纵游一卡通</string>
    <string name="uld_txykt">天下一卡通</string>
    <string name="uld_paypal">PayPal</string>
    <string name="uld_cft">财付通</string>
    <string name="uld_ylzf">银联支付</string>
    <string name="uld_goon">下一步</string>
    <string name="uld_rechargetitlepre">您已选择</string>
    <string name="uld_rechargetitlenext">支付</string>
    <string name="uld_rechargemoney">面额：</string>
    <string name="uld_rechargemoneypay">支付金额：</string>
    <string name="uld_rechargemoneytip">选择充值金额</string>
    <string name="uld_rechargetypetip">选择充值方式</string>
    <string name="uld_rechargegametip">充值成功您将获得：</string>
    <string name="uld_recharging">正在为您充值...</string>
    <string name="uld_rechargmsg">请仔细确认以上信息后再进行下一步操作，如有疑问，请拨打客服热线！</string>
    <string name="uld_rechargmsgtip">如有疑问，请拨打客服热线！</string>
    <string name="uld_forgetpasswordmsgtip">您好，如需帮助，请拨打客服热线！</string>
    <string name="uld_servicehotline">客服热线：010#62263160</string>
    <string name="uld_cancel">取消</string>
    <string name="uld_cardno">卡号：</string>
    <string name="uld_cardnotip">请输入卡号</string>
    <string name="uld_cardpwd">密码：</string>
    <string name="uld_cardpwdtip">请输入密码</string>
    <string name="uld_backgame">返回游戏</string>
    <string name="uld_custoinputmoney">自定义金额：</string>
    <string name="yuan">元</string>  
    
    <color name="uld_bg">#E9E9E9</color>
    <color name="uld_tvcolor">#000080</color>
    <color name="uld_tvcolororange">#FFA500</color>
    <color name="uld_tvcolorred">#FF0000</color>
    <color name="uld_white">#FFFFFF</color>
    <color name="uld_black">#000000</color>
    <color name="uld_gray">#525252</color>
    <color name="uld_errmsgcolor">#FF0000</color>
    <color name="uld_okmsgcolor">#57cc57</color>
    <color name="uld_disabledcolor">#636563</color>
    <color name="uld_sucesscolor">#3F7F5F</color>
    <string name="alipay_confirm_install_hint">"安装提示"</string>
    <string name="alipay_kuaijie_confirm_install">"为保证您的交易安全，需要您安装移动快捷支付，才能进行付款。\n\n点击确定，立即安装。"</string>
    <string name="alipay_qianbao_confirm_install">"为保证您的交易安全，需要您安装钱包，才能进行付款。\n\n点击确定，立即安装。"</string>
    <string name="uld_alipay_qianbao">钱包支付</string>
    <string name="uld_alipay_f">快捷支付</string>

</resources>