<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SdkStyle"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".RechargeConfirmActivity" >

    <RelativeLayout
        style="@style/TitleStyle"
        android:layout_width="fill_parent"
        android:layout_height="46dp" >

        <Button
            android:id="@+id/btnBack"
            style="@style/TitleButtonTitleLeftStyle"
            android:layout_width="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/uld_back" />

        <TextView
            style="@style/TitleFontStyle"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/uld_rechargetitle" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/uld_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="37dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/uld_bg_title_other"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uld_rechargetitlepre"
                    android:textColor="@color/uld_gray"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/tvRechargeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/uld_tvcolor"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uld_rechargetitlenext"
                    android:textColor="@color/uld_gray"
                    android:textSize="17sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/uld_bg_shape_rectangle_gray"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/llCardNo"
                    android:layout_width="fill_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="center_vertical" >

                    <TextView
                        android:id="@+id/tvCardNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/uld_cardno"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/txtCardNo"
                        android:layout_width="fill_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/uld_input_bg"
                        android:hint="@string/uld_cardnotip"
                        android:inputType="number"
                        android:singleLine="true"
                        android:textSize="17sp" />
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/uld_gray" />

                <LinearLayout
                    android:id="@+id/llCardPwd"
                    android:layout_width="fill_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/tvCardPwd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/uld_cardpwd"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/txtCardPwd"
                        android:layout_width="fill_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/uld_input_bg"
                        android:hint="@string/uld_cardpwdtip"
                        android:inputType="number"
                        android:singleLine="true"
                        android:textSize="17sp" />
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/uld_gray" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/tvMoney"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/uld_rechargemoneypay"
                        android:textSize="18sp" />

                    <Spinner
                        android:id="@+id/spMoney"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/uld_dropdown_style"
                        android:drawSelectorOnTop="true"
                        android:paddingLeft="8dp"
                        android:prompt="@string/uld_rechargemoneytip" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llCustomPay"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/tvcustoinputmoney"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/uld_custoinputmoney" />

                    <EditText
                        android:id="@+id/etcustommoney"
                        android:layout_width="120dp"
                        android:layout_height="35dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:numeric="integer"
                        android:singleLine="true"
                        android:textSize="10sp" >
                    </EditText>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/yuan" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/uld_rechargegametip"
                        android:textColor="#B0ACA6"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/tvRechargeGameTip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/uld_tvcolororange"
                        android:textSize="17sp" />
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/uld_gray" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/uld_rechargmsg"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvServiceHotline"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:autoLink="phone"
                        android:text="@string/uld_servicehotline"
                        android:textSize="17sp" />
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnRecharge"
                    style="@style/ButtonShortBlueStyle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/uld_recharge" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>